--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -2,41 +2,41 @@
 \addcontentsline{toc}{section}{Listado de símbolos, términos especiales y abreviaturas no normalizadas}
     \textbf{\Large Listado de símbolos, términos especiales y abreviaturas no normalizadas}\newline
 
-    \textbf{BLE} - Bluetooth Low Energy
+    \textbf{ADC} - Analog-Digital Converter (Conversor Analógico-Digital).
+    \newline
+    \textbf{BLE} - Bluetooth Low Energy.
     \newline
     \textbf{EEPROM} - Electrical Erasable Programmable Read Only Memory.
     \newline
-    \textbf{GPIO} - General Purpose Input Output
+    \textbf{GPIO} - General Purpose Input Output.
     \newline
-    \textbf{HR} - Humedad Relativa
+    \textbf{HR} - Humedad Relativa.
     \newline
-    \textbf{HTTP} - Hypertext Transfer Protocol
+    \textbf{HTTP} - Hypertext Transfer Protocol.
     \newline
-    \textbf{IoT} - Internet de las Cosas o Internet of Things
+    \textbf{IoT} - Internet de las Cosas o Internet of Things.
     \newline
-    \textbf{Lx} - Luxer (unidad de medida de la Iluminancia)
+    \textbf{LDO} - Low Drop Voltage.
     \newline
-    \textbf{MQTT} - Message Queing Telemetry Transport
+    \textbf{Lx} - Luxer (unidad de medida de la Iluminancia).
     \newline
-    \textbf{M2M} - Machine To Machine
+    \textbf{MQTT} - Message Queing Telemetry Transport.
     \newline
-    \textbf{PIR} - Passive Infrared Sensor
+    \textbf{M2M} - Machine To Machine.
     \newline
-    \textbf{PPB} - Partículas Por Billón
+    \textbf{PIR} - Passive Infrared Sensor.
     \newline
-    \textbf{PPM} - Partículas Por Millón
+    \textbf{PPB} - Partículas Por Billón.
     \newline
-    \textbf{RFID} - Radio Frequency Identification
+    \textbf{PPM} - Partículas Por Millón.
     \newline
-    \textbf{SN} - Sensor Network (Rede de Sensores)
+    \textbf{RFID} - Radio Frequency Identification.
     \newline
-    \textbf{Wifi} - Protocolo de Transmisión de Datos de Forma Inalámbrica
-    
-    
-    
-    
-    
-    
+    \textbf{SN} - Sensor Network (Rede de Sensores).
+    \newline
+    \textbf{TVOC} - ...
+    \newline
+    \textbf{Wifi} - Protocolo de Transmisión de Datos de Forma Inalámbrica.
     
     \setcounter{page}{1}
     \thispagestyle{plain}
