--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -250,7 +250,7 @@
         \label{imag:capa_percepcion}
     \end{figure}
 
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.2.1\hspace{5mm}Sensores}
+    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.2.1\hspace{5mm}Sensores} \label{subsec:sensores}
     \textbf{1.3.2.1\hspace{5mm}Sensores}
     
     Los sensores convierten estímulos físicos en señales eléctricas analógicas o digitales y según la señal se clasifican en acústicos, eléctricos, magnéticos, ópticos, térmicos y mecánicos \cite{hernandez}.
@@ -354,7 +354,7 @@
 
     La principal ventaja de escoger este microcontrolador ESP-12F es por la disponibilidad de wifi sin necesidad de incorporar otros accesorios, además de las pequeñas dimensiones que posee, ideal para el desarrollo de proyectos o prototipos domóticos o de automatización en poco espacio.\\
 
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.2.3\hspace{5mm}Nodos}
+    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.2.3\hspace{5mm}Nodos} \label{subsec: nodos}
     \textbf{1.3.2.3\hspace{5mm}Nodos}
 
     Los nodos que recopilarán los datos de cada vitrina estarán compuestos por el microcontrolador y los sensores encargados de tomar los valores medioambientales presentes teniendo en cuenta el material de las piezas expuestas dentro de cada una de las vitrinas.
