--- a/capitulos/dedicatoria.tex
+++ b/capitulos/dedicatoria.tex
@@ -6,7 +6,7 @@
         Dedico este trabajo a Dios por haberme permitido llegar hasta aquí.\\
         A mis padres, hermana y familia en general.\\
         A mi prometida.\\
-        A mis tutor.\\
+        A mi tutor.\\
         A mis amigos y a mis compañeros de estudio.
     }
 \end{flushright}
