--- a/ref.bib
+++ b/ref.bib
@@ -919,3 +919,9 @@ Internet of things CISCO
 	year = {2011},
 	note = {Publisher: Junta de Andalucía: Instituto Andaluz del Patrimonio Histórico}
 }
+
+@article{PorQueLlamaa,
+	title = {¿{Por} qué la llama del fuego va para arriba? {\textbar} {Ciencia} {\textbar} {EL} {PAÍS}},
+	url = {https://elpais.com/elpais/2018/07/11/ciencia/1531310604_993034.html},
+	urldate = {2022-12-02}
+}
